# html-generator

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  example.py  pyproject.toml  template.css  template.html  tests.py
.github/ISSUE_TEMPLATE/: bug_report.yml
assets/: template.css  template.html
examples/: today_with_ephemerides.py  with_ephemerides.py  without_ephemerides.py
kosmorro_pdf_generator/: __init__.py  ephemerides.py  events.py  strings.py  template.py
kosmorro_pdf_generator/assets/: template.css  template.html
