[tool.poetry]
name = "kosmorro_pdf_generator"
version = "1.0.0"
description = "Generate a nice-looking PDF document from the results of Kosmorrolib's calcuations"
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
kosmorrolib = "^1.0"
Babel = "^2.10.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
